# cgoban

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  bootstrap  cgoban1.spec  cgoban1.spec.in  configure  configure.h.in  configure.in  grab_cgoban.in  mkinstalldirs  seigen-minoru.sgf
man6/: Makefile.am  Makefile.in  cgoban.6  grab_cgoban.6
src/: Makefile.am  Makefile.in  arena.c  arena.h  cgbuts.c  cgbuts.h  cgoban.c  cgoban.h  cm2pm.c  cm2pm.h  control.c  control.h  crwin.c  crwin.h  drawStone.c  drawStone.h  editBoard.c  editBoard.h  editInfo.c  editInfo.h  editTool.c  editTool.h  gameSetup.c  gameSetup.h  goBoard.c  goBoard.h  goGame.c  goGame.h  goHash.c  goHash.h  goPic.c  goPic.h  goScore.c  goScore.h  goTime.c  goTime.h  goban.c  goban.h  help.c  help.h  (+20 more)
src/client/: Makefile.am  Makefile.in  board.c  board.h  conn.c  conn.h  data.c  data.h  game.c  game.h  login.c  login.h  look.c  look.h  main.c  main.h  match.c  match.h  player.c  player.h  server.c  server.h  setup.c  setup.h
src/gmp/: Makefile.am  Makefile.in  client.c  client.h  engine.c  engine.h  play.c  play.h  setup.c  setup.h
wmslib/: Makefile.in
wmslib/src/: Makefile.am  Makefile.in  wms.c  wms.h
wmslib/src/abut/: Makefile.am  Makefile.in  abut.c  abut.h  fsel.c  fsel.h  help.c  help.h  msg.c  msg.h  swin.c  swin.h  term.c  term.h
wmslib/src/but/: Makefile.am  Makefile.in  box.c  box.h  but.c  but.h  canvas.c  canvas.h  checkbox.c  checkbox.h  ctext.c  ctext.h  i_finder.c  i_finder.h  i_general.c  i_general.h  i_snd.c  i_snd.h  i_win.c  i_win.h  list.c  list.h  menu.c  menu.h  menu_snd.c  menu_snd.h  net.c  net.h  plain.c  plain.h  radio.c  radio.h  rcur.c  rcur.h  slide.c  slide.h  tbin.c  tbin.h  tblock.c  tblock.h  (+8 more)
wmslib/src/wms/: Makefile.am  Makefile.in  clp-x.c  clp-x.h  clp.c  clp.h  rnd.c  rnd.h  snd.c  snd.h  str.c  str.h
