noinst_LIBRARIES = libclient.a

INCLUDES = -I $(top_srcdir)/wmslib/src

libclient_a_SOURCES = \
	board.c \
	conn.c \
	data.c \
	game.c \
	login.c \
	look.c \
	main.c \
	match.c \
	player.c \
	server.c \
	setup.c

noinst_HEADERS = \
	board.h \
	conn.h \
	data.h \
	game.h \
	login.h \
	look.h \
	main.h \
	match.h \
	player.h \
	server.h \
	setup.h
