noinst_LIBRARIES = libbut.a

libbut_a_SOURCES = \
	box.c \
	but.c \
	canvas.c \
	checkbox.c \
	ctext.c \
	i_finder.c \
	i_general.c \
	i_snd.c \
	i_win.c \
	list.c \
	menu.c \
	menu_snd.c \
	net.c \
	plain.c \
	radio.c \
	rcur.c \
	slide.c \
	tbin.c \
	tblock.c \
	text.c \
	textin.c \
	timer.c \
	write.c

INCLUDES = -I $(srcdir)/..

noinst_HEADERS = \
	box.h \
	but.h \
	canvas.h \
	checkbox.h \
	ctext.h \
	i_finder.h \
	i_general.h \
	i_snd.h \
	i_win.h \
	list.h \
	menu.h \
	menu_snd.h \
	net.h \
	plain.h \
	radio.h \
	rcur.h \
	slide.h \
	tbin.h \
	tblock.h \
	text.h \
	textin.h \
	timer.h \
	write.h
